fix map with preserved order
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>